Compiler for OOP decaf (CISC672)/pp3/y.output
Terminals unused in grammar

   T_Pincrement
   T_Pdecrement


State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 175 conflicts: 2 shift/reduce
State 176 conflicts: 2 shift/reduce
State 177 conflicts: 2 shift/reduce
State 178 conflicts: 2 shift/reduce
State 179 conflicts: 2 shift/reduce
State 182 conflicts: 15 shift/reduce
State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: FunctionDecl
    5     | VarDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 InterfaceDecl: T_Interface T_Identifier '{' PrototypePlus '}'
    9              | T_Interface T_Identifier '{' '}'

   10 PrototypePlus: PrototypePlus Prototype
   11              | Prototype

   12 Prototype: Type T_Identifier '(' Formals ')' ';'
   13          | T_Void T_Identifier '(' Formals ')' ';'

   14 ClassDecl: T_Class T_Identifier FieldStar
   15          | T_Class T_Identifier T_Extends T_Identifier FieldStar
   16          | T_Class T_Identifier T_Implements IdList FieldStar
   17          | T_Class T_Identifier T_Extends T_Identifier T_Implements IdList FieldStar

   18 IdList: IdList ',' T_Identifier
   19       | T_Identifier

   20 FieldList: FieldList Field
   21          | Field

   22 FieldStar: '{' '}'
   23          | '{' FieldList '}'

   24 Field: VarDecl
   25      | FunctionDecl

   26 VarDecl: Variable ';'

   27 VarDeclList: VarDeclList VarDecl
   28            | VarDecl

   29 Variable: Type T_Identifier

   30 FunctionDecl: Type T_Identifier '(' Formals ')' StmtBlock
   31             | T_Void T_Identifier '(' Formals ')' StmtBlock

   32 Type: T_Int
   33     | T_Double
   34     | T_Bool
   35     | T_String
   36     | T_Identifier
   37     | Type T_Dims

   38 Formals: Formals ',' Variable
   39        | Variable
   40        | /* empty */

   41 StmtBlock: '{' VarDeclList StmtList '}'
   42          | '{' VarDeclList '}'
   43          | '{' StmtList '}'
   44          | '{' '}'

   45 Stmt: Expr ';'
   46     | ';'
   47     | IfStmt
   48     | WhileStmt
   49     | ForStmt
   50     | BreakStmt
   51     | ReturnStmt
   52     | PrintStmt
   53     | StmtBlock

   54 Expr: LValue '=' Expr
   55     | Constant
   56     | LValue
   57     | T_This
   58     | Call
   59     | '(' Expr ')'
   60     | Expr '+' Expr
   61     | Expr '-' Expr
   62     | Expr '*' Expr
   63     | Expr '/' Expr
   64     | Expr '%' Expr
   65     | '-' Expr
   66     | Expr '<' Expr
   67     | Expr '>' Expr
   68     | Expr T_LessEqual Expr
   69     | Expr T_GreaterEqual Expr
   70     | Expr T_Equal Expr
   71     | Expr T_NotEqual Expr
   72     | Expr T_And Expr
   73     | Expr T_Or Expr
   74     | '!' Expr
   75     | T_ReadInteger '(' ')'
   76     | T_ReadLine '(' ')'
   77     | T_New '(' T_Identifier ')'
   78     | T_NewArray '(' Expr ',' Type ')'

   79 ExprList: ExprList ',' Expr
   80         | Expr

   81 LValue: T_Identifier
   82       | Expr '.' T_Identifier
   83       | Expr '[' Expr ']'

   84 Constant: T_IntConstant
   85         | T_DoubleConstant
   86         | T_BoolConstant
   87         | T_StringConstant
   88         | T_Null

   89 Call: T_Identifier '(' Actuals ')'
   90     | Expr '.' T_Identifier '(' Actuals ')'

   91 Actuals: ExprList
   92        | /* empty */

   93 IfStmt: T_If '(' Expr ')' Stmt
   94       | T_If '(' Expr ')' Stmt T_Else Stmt

   95 WhileStmt: T_While '(' Expr ')' Stmt

   96 ForStmt: T_For '(' Expr ';' Expr ';' Expr ')' Stmt
   97        | T_For '(' ';' Expr ';' Expr ')' Stmt
   98        | T_For '(' Expr ';' Expr ';' ')' Stmt
   99        | T_For '(' ';' Expr ';' ')' Stmt

  100 BreakStmt: T_Break ';'

  101 ReturnStmt: T_Return ';'
  102           | T_Return Expr ';'

  103 PrintStmt: T_Print '(' ExprList ')' ';'

  104 StmtList: StmtList Stmt
  105         | Stmt


Terminals, with rules where they appear

$end (0) 0
'!' (33) 74
'%' (37) 64
'(' (40) 12 13 30 31 59 75 76 77 78 89 90 93 94 95 96 97 98 99 103
')' (41) 12 13 30 31 59 75 76 77 78 89 90 93 94 95 96 97 98 99 103
'*' (42) 62
'+' (43) 60
',' (44) 18 38 78 79
'-' (45) 61 65
'.' (46) 82 90
'/' (47) 63
';' (59) 12 13 26 45 46 96 97 98 99 100 101 102 103
'<' (60) 66
'=' (61) 54
'>' (62) 67
'[' (91) 83
']' (93) 83
'{' (123) 8 9 22 23 41 42 43 44
'}' (125) 8 9 22 23 41 42 43 44
error (256)
T_Void (258) 13 31
T_Bool (259) 34
T_Int (260) 32
T_Double (261) 33
T_String (262) 35
T_Class (263) 14 15 16 17
T_LessEqual (264) 68
T_GreaterEqual (265) 69
T_Equal (266) 70
T_NotEqual (267) 71
T_Dims (268) 37
T_And (269) 72
T_Or (270) 73
T_Null (271) 88
T_Extends (272) 15 17
T_This (273) 57
T_Interface (274) 8 9
T_Implements (275) 16 17
T_While (276) 95
T_For (277) 96 97 98 99
T_If (278) 93 94
T_Else (279) 94
T_Return (280) 101 102
T_Break (281) 100
T_New (282) 77
T_NewArray (283) 78
T_Print (284) 103
T_ReadInteger (285) 75
T_ReadLine (286) 76
T_Pincrement (287)
T_Pdecrement (288)
T_Identifier (289) 8 9 12 13 14 15 16 17 18 19 29 30 31 36 77 81 82
    89 90
T_StringConstant (290) 87
T_IntConstant (291) 84
T_DoubleConstant (292) 85
T_BoolConstant (293) 86
UnaryMinus (294)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Program (59)
    on left: 1, on right: 0
DeclList (60)
    on left: 2 3, on right: 1 2
Decl (61)
    on left: 4 5 6 7, on right: 2 3
InterfaceDecl (62)
    on left: 8 9, on right: 7
PrototypePlus (63)
    on left: 10 11, on right: 8 10
Prototype (64)
    on left: 12 13, on right: 10 11
ClassDecl (65)
    on left: 14 15 16 17, on right: 6
IdList (66)
    on left: 18 19, on right: 16 17 18
FieldList (67)
    on left: 20 21, on right: 20 23
FieldStar (68)
    on left: 22 23, on right: 14 15 16 17
Field (69)
    on left: 24 25, on right: 20 21
VarDecl (70)
    on left: 26, on right: 5 24 27 28
VarDeclList (71)
    on left: 27 28, on right: 27 41 42
Variable (72)
    on left: 29, on right: 26 38 39
FunctionDecl (73)
    on left: 30 31, on right: 4 25
Type (74)
    on left: 32 33 34 35 36 37, on right: 12 29 30 37 78
Formals (75)
    on left: 38 39 40, on right: 12 13 30 31 38
StmtBlock (76)
    on left: 41 42 43 44, on right: 30 31 53
Stmt (77)
    on left: 45 46 47 48 49 50 51 52 53, on right: 93 94 95 96 97 98
    99 104 105
Expr (78)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78, on right: 45 54 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 78 79 80 82 83 90 93 94 95 96 97 98 99 102
ExprList (79)
    on left: 79 80, on right: 79 91 103
LValue (80)
    on left: 81 82 83, on right: 54 56
Constant (81)
    on left: 84 85 86 87 88, on right: 55
Call (82)
    on left: 89 90, on right: 58
Actuals (83)
    on left: 91 92, on right: 89 90
IfStmt (84)
    on left: 93 94, on right: 47
WhileStmt (85)
    on left: 95, on right: 48
ForStmt (86)
    on left: 96 97 98 99, on right: 49
BreakStmt (87)
    on left: 100, on right: 50
ReturnStmt (88)
    on left: 101 102, on right: 51
PrintStmt (89)
    on left: 103, on right: 52
StmtList (90)
    on left: 104 105, on right: 41 43 104


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    InterfaceDecl  go to state 12
    ClassDecl      go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    FunctionDecl   go to state 16
    Type           go to state 17


state 1

   31 FunctionDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


state 2

   34 Type: T_Bool .

    $default  reduce using rule 34 (Type)


state 3

   32 Type: T_Int .

    $default  reduce using rule 32 (Type)


state 4

   33 Type: T_Double .

    $default  reduce using rule 33 (Type)


state 5

   35 Type: T_String .

    $default  reduce using rule 35 (Type)


state 6

   14 ClassDecl: T_Class . T_Identifier FieldStar
   15          | T_Class . T_Identifier T_Extends T_Identifier FieldStar
   16          | T_Class . T_Identifier T_Implements IdList FieldStar
   17          | T_Class . T_Identifier T_Extends T_Identifier T_Implements IdList FieldStar

    T_Identifier  shift, and go to state 19


state 7

    8 InterfaceDecl: T_Interface . T_Identifier '{' PrototypePlus '}'
    9              | T_Interface . T_Identifier '{' '}'

    T_Identifier  shift, and go to state 20


state 8

   36 Type: T_Identifier .

    $default  reduce using rule 36 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    InterfaceDecl  go to state 12
    ClassDecl      go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    FunctionDecl   go to state 16
    Type           go to state 17


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 13

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 14

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


state 15

   26 VarDecl: Variable . ';'

    ';'  shift, and go to state 23


state 16

    4 Decl: FunctionDecl .

    $default  reduce using rule 4 (Decl)


state 17

   29 Variable: Type . T_Identifier
   30 FunctionDecl: Type . T_Identifier '(' Formals ')' StmtBlock
   37 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 25


state 18

   31 FunctionDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


state 19

   14 ClassDecl: T_Class T_Identifier . FieldStar
   15          | T_Class T_Identifier . T_Extends T_Identifier FieldStar
   16          | T_Class T_Identifier . T_Implements IdList FieldStar
   17          | T_Class T_Identifier . T_Extends T_Identifier T_Implements IdList FieldStar

    T_Extends     shift, and go to state 27
    T_Implements  shift, and go to state 28
    '{'           shift, and go to state 29

    FieldStar  go to state 30


state 20

    8 InterfaceDecl: T_Interface T_Identifier . '{' PrototypePlus '}'
    9              | T_Interface T_Identifier . '{' '}'

    '{'  shift, and go to state 31


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 23

   26 VarDecl: Variable ';' .

    $default  reduce using rule 26 (VarDecl)


state 24

   37 Type: Type T_Dims .

    $default  reduce using rule 37 (Type)


state 25

   29 Variable: Type T_Identifier .
   30 FunctionDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 32

    $default  reduce using rule 29 (Variable)


state 26

   31 FunctionDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 40 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 35


state 27

   15 ClassDecl: T_Class T_Identifier T_Extends . T_Identifier FieldStar
   17          | T_Class T_Identifier T_Extends . T_Identifier T_Implements IdList FieldStar

    T_Identifier  shift, and go to state 36


state 28

   16 ClassDecl: T_Class T_Identifier T_Implements . IdList FieldStar

    T_Identifier  shift, and go to state 37

    IdList  go to state 38


state 29

   22 FieldStar: '{' . '}'
   23          | '{' . FieldList '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 39

    FieldList     go to state 40
    Field         go to state 41
    VarDecl       go to state 42
    Variable      go to state 15
    FunctionDecl  go to state 43
    Type          go to state 17


state 30

   14 ClassDecl: T_Class T_Identifier FieldStar .

    $default  reduce using rule 14 (ClassDecl)


state 31

    8 InterfaceDecl: T_Interface T_Identifier '{' . PrototypePlus '}'
    9              | T_Interface T_Identifier '{' . '}'

    T_Void        shift, and go to state 44
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 45

    PrototypePlus  go to state 46
    Prototype      go to state 47
    Type           go to state 48


state 32

   30 FunctionDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 40 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 49


state 33

   39 Formals: Variable .

    $default  reduce using rule 39 (Formals)


state 34

   29 Variable: Type . T_Identifier
   37 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 50


state 35

   31 FunctionDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock
   38 Formals: Formals . ',' Variable

    ')'  shift, and go to state 51
    ','  shift, and go to state 52


state 36

   15 ClassDecl: T_Class T_Identifier T_Extends T_Identifier . FieldStar
   17          | T_Class T_Identifier T_Extends T_Identifier . T_Implements IdList FieldStar

    T_Implements  shift, and go to state 53
    '{'           shift, and go to state 29

    FieldStar  go to state 54


state 37

   19 IdList: T_Identifier .

    $default  reduce using rule 19 (IdList)


state 38

   16 ClassDecl: T_Class T_Identifier T_Implements IdList . FieldStar
   18 IdList: IdList . ',' T_Identifier

    '{'  shift, and go to state 29
    ','  shift, and go to state 55

    FieldStar  go to state 56


state 39

   22 FieldStar: '{' '}' .

    $default  reduce using rule 22 (FieldStar)


state 40

   20 FieldList: FieldList . Field
   23 FieldStar: '{' FieldList . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 57

    Field         go to state 58
    VarDecl       go to state 42
    Variable      go to state 15
    FunctionDecl  go to state 43
    Type          go to state 17


state 41

   21 FieldList: Field .

    $default  reduce using rule 21 (FieldList)


state 42

   24 Field: VarDecl .

    $default  reduce using rule 24 (Field)


state 43

   25 Field: FunctionDecl .

    $default  reduce using rule 25 (Field)


state 44

   13 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 59


state 45

    9 InterfaceDecl: T_Interface T_Identifier '{' '}' .

    $default  reduce using rule 9 (InterfaceDecl)


state 46

    8 InterfaceDecl: T_Interface T_Identifier '{' PrototypePlus . '}'
   10 PrototypePlus: PrototypePlus . Prototype
